[gd_scene load_steps=33 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scripts/personagem.gd" type="Script" id=2]
[ext_resource path="res://assets/Personagem/p1_walk01.png" type="Texture" id=3]
[ext_resource path="res://assets/Personagem/p1_walk02.png" type="Texture" id=4]
[ext_resource path="res://assets/Personagem/p1_walk03.png" type="Texture" id=5]
[ext_resource path="res://assets/Personagem/p1_walk04.png" type="Texture" id=6]
[ext_resource path="res://assets/Personagem/p1_walk05.png" type="Texture" id=7]
[ext_resource path="res://assets/Personagem/p1_walk06.png" type="Texture" id=8]
[ext_resource path="res://tilesets/tileset.tres" type="TileSet" id=9]
[ext_resource path="res://assets/Tiles/cloud1.png" type="Texture" id=10]
[ext_resource path="res://scenes/moeda.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/lesma.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/boco_dest.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/platMovel.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/Botoes/esquerda0.png" type="Texture" id=15]
[ext_resource path="res://assets/Botoes/esquerda1.png" type="Texture" id=16]
[ext_resource path="res://assets/Botoes/direita0.png" type="Texture" id=17]
[ext_resource path="res://assets/Botoes/direita1.png" type="Texture" id=18]
[ext_resource path="res://assets/Botoes/cima0.png" type="Texture" id=19]
[ext_resource path="res://assets/Botoes/cima1.png" type="Texture" id=20]
[ext_resource path="res://assets/coin48.png" type="Texture" id=21]
[ext_resource path="res://fonts/font100.fnt" type="BitmapFont" id=22]
[ext_resource path="res://assets/hud_heartFull.png" type="Texture" id=23]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 385 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 29.3102, 57.5374 )

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 30.248, 1.60669 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 31.0227, 56.6234 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 27.4496, 0.444794 )

[sub_resource type="Curve2D" id=7]

bake_interval = 5.0
_data = {
"points": Vector2Array( 0, 0, 0, 0, -75.1014, 3.11887, 0, 0, 0, 0, 381.984, 3.11887 )
}

[sub_resource type="Curve2D" id=8]

bake_interval = 5.0
_data = {
"points": Vector2Array( 0, 0, 0, 0, 0.535294, -0.366287, -190.496, 0.163242, 234.232, -23.1297, 245, -245, 0, 0, 0, 0, 560.064, -0.277134 )
}

[sub_resource type="StyleBoxFlat" id=9]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.501961, 0.745098, 0.121569, 1 )
dark_color = Color( 0.501961, 0.745098, 0.121569, 1 )
border_size = 10
border_blend = false
draw_bg = false

[node name="game" type="Node"]

script/script = ExtResource( 1 )

[node name="spawn_point" type="Position2D" parent="."]

transform/pos = Vector2( 105, 455 )

[node name="spawn_time" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="dead_cam" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = -10000000
limit/right = 10000000
limit/bottom = 800
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="fim" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 3045, 315 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 0

[node name="shape" type="CollisionShape2D" parent="fim"]

transform/pos = Vector2( 3045, 315 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="personagem" type="KinematicBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 90.8956, 470.836 )
z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1.94119, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 2
collision/margin = 0.01
script/script = ExtResource( 2 )

[node name="sprite" type="AnimatedSprite" parent="personagem"]

transform/scale = Vector2( 1.3, 1.3 )
frames = SubResource( 3 )
animation = "walk"
frame = 3
playing = true

[node name="shape" type="CollisionShape2D" parent="personagem"]

transform/pos = Vector2( 1.94119, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="rayE" type="RayCast2D" parent="personagem"]

visibility/light_mask = 2
transform/pos = Vector2( -24.8687, 56.9612 )
enabled = true
cast_to = Vector2( 0, 5 )
layer_mask = 1
type_mask = 15

[node name="rayD" type="RayCast2D" parent="personagem"]

visibility/light_mask = 2
transform/pos = Vector2( 29.1769, 56.5738 )
enabled = true
cast_to = Vector2( 0, 5 )
layer_mask = 1
type_mask = 15

[node name="Camera" type="Camera2D" parent="personagem"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = -10000000
limit/right = 10000000
limit/bottom = 800
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="pes" type="Area2D" parent="personagem"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1.49233, 61.0931 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 1024
collision/mask = 8192

[node name="shape" type="CollisionShape2D" parent="personagem/pes"]

transform/pos = Vector2( 1.49233, 61.0931 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="corpo" type="Area2D" parent="personagem"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.875961, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 1024
collision/mask = 8192

[node name="shape" type="CollisionShape2D" parent="personagem/corpo"]

transform/pos = Vector2( 0.875961, 0 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="cabeça" type="Area2D" parent="personagem"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -0.330627, -61.9449 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="shape" type="CollisionShape2D" parent="personagem/cabeça"]

transform/pos = Vector2( -0.330627, -61.9449 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="tileMap" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 9 )
cell/size = Vector2( 70, 70 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 2
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -65537, 3, -1, 3, 65535, 3, 131071, 3, 196607, 3, 262143, 3, 327679, 3, 393215, 3, 327690, 1, 327691, 0, 327692, 2, 458751, 3, 524287, 3, 589823, 3, 524288, 0, 524289, 0, 524290, 0, 524291, 0, 524292, 0, 524293, 0, 524294, 0, 524295, 0, 524296, 0, 524297, 0, 524298, 0, 524299, 0, 524300, 0, 524301, 0, 524302, 0, 524303, 0, 524304, 0, 524305, 0, 524306, 4, 524307, 4, 524308, 4, 524309, 0, 524310, 0, 524311, 0, 524323, 0, 524324, 0, 524325, 0, 524326, 0, 524327, 0, 524328, 0, 524329, 0, 524330, 0, 524331, 0, 524332, 0, 524333, 0, 524334, 0, 524335, 0, 524336, 0, 524337, 0, 524338, 0, 524339, 0, 524340, 0, 524341, 0, 524342, 0, 524343, 0, 524344, 0, 524345, 0, 524346, 0, 589824, 3, 589825, 3, 589826, 3, 589827, 3, 589828, 3, 589829, 3, 589830, 3, 589831, 3, 589832, 3, 589833, 3, 589834, 3, 589835, 3, 589836, 3, 589837, 3, 589838, 3, 589839, 3, 589840, 3, 589841, 3, 589842, 5, 589843, 5, 589844, 5, 589845, 3, 589846, 3, 589847, 3, 589859, 3, 589860, 3, 589861, 3, 589862, 3, 589863, 3, 589864, 3, 589865, 3, 589866, 3, 589867, 3, 655360, 3, 655361, 3, 655362, 3, 655363, 3, 655364, 3, 655365, 3, 655366, 3, 655367, 3, 655368, 3, 655369, 3, 655370, 3, 655371, 3, 655372, 3, 655373, 3, 655374, 3, 655375, 3, 655376, 3, 655377, 3, 655378, 5, 655379, 5, 655380, 5, 655381, 3, 655382, 3, 655383, 3, 655395, 3, 655396, 3, 655397, 3, 655398, 3, 655399, 3, 655400, 3, 655401, 3, 655402, 3, 655403, 3, 720896, 3, 720897, 3, 720898, 3, 720899, 3, 720900, 3, 720901, 3, 720902, 3, 720903, 3, 720904, 3, 720905, 3, 720906, 3, 720907, 3, 720908, 3, 720909, 3, 720910, 3, 720911, 3, 720912, 3, 720913, 3, 720914, 5, 720915, 5, 720916, 5, 720917, 3, 720918, 3, 720919, 3, 720931, 3, 720932, 3, 720933, 3, 720934, 3, 720935, 3, 720936, 3, 720937, 3, 720938, 3, 720939, 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="parallax" type="ParallaxBackground" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0.5, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = true

[node name="layer" type="ParallaxLayer" parent="parallax"]

editor/display_folded = true
motion/scale = Vector2( 0.5, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 0 )

[node name="Sprite" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 108.18, 92.7259 )
texture = ExtResource( 10 )

[node name="Sprite1" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 336.905, 241.088 )
texture = ExtResource( 10 )

[node name="Sprite3" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 1115.8, 207.088 )
texture = ExtResource( 10 )

[node name="Sprite4" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 905.625, 117.453 )
texture = ExtResource( 10 )

[node name="Sprite2" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 599.628, 71.09 )
texture = ExtResource( 10 )

[node name="moedas" type="Node2D" parent="."]

editor/display_folded = true

[node name="moeda" parent="moedas" instance=ExtResource( 11 )]

transform/pos = Vector2( 455, 525 )

[node name="moeda1" parent="moedas" instance=ExtResource( 11 )]

transform/pos = Vector2( 735, 525 )

[node name="moeda2" parent="moedas" instance=ExtResource( 11 )]

transform/pos = Vector2( 1155, 525 )

[node name="moeda3" parent="moedas" instance=ExtResource( 11 )]

transform/pos = Vector2( 875, 315 )

[node name="moeda6" parent="moedas" instance=ExtResource( 11 )]

transform/pos = Vector2( 1575, 315 )

[node name="moeda7" parent="moedas" instance=ExtResource( 11 )]

transform/pos = Vector2( 1575, 525 )

[node name="moeda8" parent="moedas" instance=ExtResource( 11 )]

transform/pos = Vector2( 2065, 175 )

[node name="moeda9" parent="moedas" instance=ExtResource( 11 )]

transform/pos = Vector2( 2555, 525 )

[node name="moeda10" parent="moedas" instance=ExtResource( 11 )]

transform/pos = Vector2( 2975, 525 )

[node name="moeda11" parent="moedas" instance=ExtResource( 11 )]

transform/pos = Vector2( 2765, 525 )

[node name="moeda4" parent="moedas" instance=ExtResource( 11 )]

transform/pos = Vector2( 945, 525 )

[node name="moeda5" parent="moedas" instance=ExtResource( 11 )]

transform/pos = Vector2( 735, 315 )

[node name="inimigos" type="Node2D" parent="."]

editor/display_folded = true

[node name="lesma" parent="inimigos" instance=ExtResource( 12 )]

transform/pos = Vector2( 659.148, 537.192 )
curve = SubResource( 7 )

[node name="blocos" type="Node2D" parent="."]

editor/display_folded = true

[node name="boco_dest" parent="blocos" instance=ExtResource( 13 )]

transform/pos = Vector2( 595, 385 )

[node name="boco_dest1" parent="blocos" instance=ExtResource( 13 )]

transform/pos = Vector2( 735, 175 )

[node name="boco_dest2" parent="blocos" instance=ExtResource( 13 )]

transform/pos = Vector2( 875, 175 )

[node name="boco_dest3" parent="blocos" instance=ExtResource( 13 )]

transform/pos = Vector2( 1575, 385 )

[node name="boco_dest4" parent="blocos" instance=ExtResource( 13 )]

transform/pos = Vector2( 2555, 385 )

[node name="boco_dest5" parent="blocos" instance=ExtResource( 13 )]

transform/pos = Vector2( 2975, 385 )

[node name="plataforma" type="Node2D" parent="."]

editor/display_folded = true

[node name="platMovel" parent="plataforma" instance=ExtResource( 14 )]

curve = SubResource( 8 )

[node name="canvasLayer" type="CanvasLayer" parent="."]

layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="controle" type="Node2D" parent="canvasLayer"]

editor/display_folded = true

[node name="touchLeft" type="TouchScreenButton" parent="canvasLayer/controle"]

transform/pos = Vector2( 1.17981, 593.147 )
transform/scale = Vector2( 3.5, 3.5 )
normal = ExtResource( 15 )
pressed = ExtResource( 16 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="touchRigth" type="TouchScreenButton" parent="canvasLayer/controle"]

transform/pos = Vector2( 158.88, 593.147 )
transform/scale = Vector2( 3.5, 3.5 )
normal = ExtResource( 17 )
pressed = ExtResource( 18 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="touchUp" type="TouchScreenButton" parent="canvasLayer/controle"]

transform/pos = Vector2( 1132.89, 593.147 )
transform/scale = Vector2( 3.5, 3.5 )
normal = ExtResource( 19 )
pressed = ExtResource( 20 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Panel" type="Panel" parent="canvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 100.0
custom_styles/panel = SubResource( 9 )

[node name="moeda" type="Sprite" parent="canvasLayer/Panel"]

transform/pos = Vector2( 69.6072, 49.5842 )
transform/scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 21 )
hframes = 64

[node name="moedas" type="Label" parent="canvasLayer/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 123.0
margin/top = 1.0
margin/right = 266.0
margin/bottom = 174.0
custom_fonts/font = ExtResource( 22 )
custom_colors/font_color = Color( 0.772549, 0.560784, 0.360784, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="heart3" type="TextureFrame" parent="canvasLayer/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1191.0
margin/top = 10.0
margin/right = 1270.0
margin/bottom = 91.0
texture = ExtResource( 23 )
stretch_mode = 6

[node name="heart2" type="TextureFrame" parent="canvasLayer/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1108.0
margin/top = 10.0
margin/right = 1187.0
margin/bottom = 91.0
texture = ExtResource( 23 )
stretch_mode = 6

[node name="heart1" type="TextureFrame" parent="canvasLayer/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1023.0
margin/top = 10.0
margin/right = 1102.0
margin/bottom = 91.0
texture = ExtResource( 23 )
stretch_mode = 6

[node name="time" type="Label" parent="canvasLayer/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 556.0
margin/top = -2.0
margin/right = 736.0
margin/bottom = 105.0
custom_fonts/font = ExtResource( 22 )
custom_colors/font_color = Color( 0.764706, 0.54902, 0.341176, 1 )
text = "30"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="game_time" type="Timer" parent="."]

process_mode = 1
wait_time = 30.0
one_shot = true
autostart = true

[connection signal="timeout" from="spawn_time" to="." method="_on_spawn_time_timeout"]

[connection signal="body_enter" from="fim" to="personagem" method="_on_fim_body_enter"]

[connection signal="fim" from="personagem" to="." method="_on_personagem_fim"]

[connection signal="moeda" from="personagem" to="." method="_on_personagem_moeda"]

[connection signal="morreu" from="personagem" to="." method="_on_personagem_morreu"]

[connection signal="body_enter" from="personagem/pes" to="personagem" method="_on_pes_body_enter"]

[connection signal="body_enter" from="personagem/corpo" to="personagem" method="_on_corpo_body_enter"]

[connection signal="body_enter" from="personagem/cabeça" to="personagem" method="_on_cabea_body_enter"]

[connection signal="pressed" from="canvasLayer/controle/touchLeft" to="personagem" method="_on_touchLeft_pressed"]

[connection signal="released" from="canvasLayer/controle/touchLeft" to="personagem" method="_on_touchLeft_released"]

[connection signal="pressed" from="canvasLayer/controle/touchRigth" to="personagem" method="_on_touchRigth_pressed"]

[connection signal="released" from="canvasLayer/controle/touchRigth" to="personagem" method="_on_touchRigth_released"]

[connection signal="pressed" from="canvasLayer/controle/touchUp" to="personagem" method="_on_touchUp_pressed"]

[connection signal="released" from="canvasLayer/controle/touchUp" to="personagem" method="_on_touchUp_released"]

[connection signal="timeout" from="game_time" to="personagem" method="_on_game_time_timeout"]


